--- a/ShopSite.html
+++ b/ShopSite.html
@@ -34,7 +34,7 @@ of this page.
 <p>
 <a href="brand.txt" >Contents</a>
 of the PHP page that gets called.
-(And the <a href="connectionData.txt" >connection data</a>,
+(And the <a href="finalConnectionData.txt" >connection data</a>,
 kept separately for security reasons.)
 
 
