--- a/ShopSite.html
+++ b/ShopSite.html
@@ -13,6 +13,7 @@
 
 <p>
 Please enter a brand name to get a list of all related products.
+Current brands include: ['Real', 'Girl', and 'Alien Workshop']
 
 <p>
 
@@ -23,7 +24,20 @@ Please enter a brand name to get a list of all related products.
 <input type="reset" value="erase">
 </form>
 
+<hr>
+<p>
+       
+Please enter a contest code to get a list of the winners and their prizes.
+Current brands include: ['1', '2', '3']
 
+<p>
+
+<form action="findContestWinner.php" method="POST">
+
+<input type="text" name="code"> <br>
+<input type="submit" value="submit">
+<input type="reset" value="erase">
+</form>
 
 <hr>
 
